[package]
edition      = "2024"
name         = "st7735-display-template"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "st7735-display-template"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["defmt", "esp32", "unstable"] }


defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32"] }

mipidsi = "0.10.0"                    # ST7735 driver lives here
embedded-graphics = "0.8.1"          # draw shapes, text, images
display-interface-spi = "0.5.0"      # SPI bridge
embedded-hal-bus = "0.3.0"           # SPI bus sharing
static_cell = "2.1.0"
heapless = { version = "0.9.2" }
critical-section = "1.2.0"
esp-alloc        = { version = "0.9.0", features = ["defmt"] }
esp-println      = { version = "0.16.1", features = ["defmt-espflash", "esp32"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
